# fast_doctolib

./: .gitignore  alembic.ini  pyproject.toml
alembic/: env.py
app/: app.py
app/api/endpoints/: user.py
app/api/v1/: routers.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  specialty.py  user.py
